# persona

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py  vercel.json
data/: README.md  source.md
data/australia/: README.md  australia.json
data/canada/: README.md  canada.json
data/france/: README.md  france.json
data/germany/: README.md  germany.json
data/global/: README.md  global.json
data/united_kingdom/: README.md
data/united_kingdom/england/: README.md  england.json
data/united_kingdom/england/london/: README.md  london.json
data/united_kingdom/northern_ireland/: README.md  northern_ireland.json
data/united_kingdom/scotland/: README.md  scotland.json
data/united_kingdom/scotland/edinbrough/: README.md
data/united_kingdom/wales/: README.md  wales.json
data/united_states_of_america/california/: README.md  california.json
data/united_states_of_america/florida/: README.md  florida.json
data/united_states_of_america/texas/: README.md  texas.json
src/: main.py
src/api/: README.md  app.py  handler.py  util.py
src/lib/: api_helper.py  format.py  generate.py  util.py
src/persona/: cli.py
src/persona.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/persona/api/: app.py  handler.py
src/persona/data/: README.md
src/persona/data/australia/: README.md  australia.json
src/persona/data/austria/: README.md  austria.json
src/persona/data/belgium/: README.md  belgium.json
src/persona/data/brazil/: README.md  brazil.json
src/persona/data/canada/: README.md  canada.json
src/persona/data/czech_republic/: README.md  czech_republic.json
src/persona/data/denmark/: README.md  denmark.json
src/persona/data/egypt/: README.md  egypt.json
src/persona/data/finland/: README.md  finland.json
src/persona/data/france/: README.md  france.json
src/persona/data/germany/: README.md  germany.json
src/persona/data/ghana/: README.md  ghana.json
src/persona/lib/: format.py  generate.py
src/persona/scripts/: gen_readme.py  generate_docs.py
src/scripts/: gen_readme.py
tests/: test_generate.py
(+66 files in other folders)
