[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "persona"
version = "0.1.0"
description = "Generate realistic character profiles from real-world demographic data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "numpy>=1.24",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "fastapi-analytics>=1.1.4",
]

[project.scripts]
persona = "persona.cli:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
persona = ["data/**/*"]

[dependency-groups]
dev = ["pytest>=8"]
scripts = ["matplotlib>=3.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
